--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,14 @@
         android:theme="@style/splash_screen"
         tools:targetApi="31">
         <activity
-            android:name=".PlaylistDetails"
+            android:name=".SelectionActivity"
             android:screenOrientation="portrait"
             android:exported="false"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
+            android:name=".PlaylistDetails"
+            android:exported="false"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".PlaylistActivity"
