--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     //Glide for image loading
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'androidx.activity:activity:1.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
     //for Notification
